--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,22 +19,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.6.2",
-    "mysql2": "^2.1.0",
-    "sequelize": "^6.3.4",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "eslint-config-trybe-backend": "1.0.3",
+    "express": "4.17.1",
+    "mongodb": "3.6.2",
+    "mysql2": "2.1.0",
+    "sequelize": "6.3.4",
     "socket.io": "3.0.4"
   },
   "devDependencies": {
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "jest": "^26.4.2",
-    "nodemon": "^2.0.4",
-    "sequelize-cli": "^6.2.0"
+    "eslint": "7.7.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-sonarjs": "0.5.0",
+    "jest": "26.4.2",
+    "nodemon": "2.0.4",
+    "sequelize-cli": "6.2.0"
   }
 }
