--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
   },
   "homepage": "https://github.com/betrybe/sd-0x-project-trybeer-v2#readme",
   "dependencies": {
-    "@mysql/xdevapi": "^8.0.20",
-    "mysql2": "^2.1.0",
-    "sequelize": "^6.3.4",
-    "mongodb": "^3.6.2",
-    "dotenv": "^8.2.0"
+    "@mysql/xdevapi": "8.0.20",
+    "mysql2": "2.1.0",
+    "sequelize": "6.3.4",
+    "mongodb": "3.6.2",
+    "dotenv": "8.2.0"
   },
   "devDependencies": {
-    "cypress": "^5.3.0",
-    "cypress-multi-reporters": "^1.2.3",
-    "faker": "^4.1.0",
-    "mocha": "^7.0.1",
-    "mochawesome": "^4.1.0",
-    "mochawesome-merge": "^4.0.0",
-    "mochawesome-report-generator": "^4.1.0",
-    "sequelize-cli": "^6.2.0"
+    "cypress": "5.3.0",
+    "cypress-multi-reporters": "1.2.3",
+    "faker": "4.1.0",
+    "mocha": "7.0.1",
+    "mochawesome": "4.1.0",
+    "mochawesome-merge": "4.0.0",
+    "mochawesome-report-generator": "4.1.0",
+    "sequelize-cli": "6.2.0"
   }
 }
